Use OpenRewrite to migrate code to JDK 21